[tool.poetry]
name = "d.palmtb.net"
version = "1.0.0"
description = "mkouhei's blog"
authors = ["Kouhei Maeda <mkouhei@palmtb.net>"]
license = "CC-BY-SA-3.0"

[tool.poetry.dependencies]
python = "^3.8"
tinkerer = {git = "https://github.com/mkouhei/tinkerer.git", rev = "develop"}
sphinxcontrib-blockdiag = "^2.0.0"
sphinxcontrib-nwdiag = "^2.0.0"
sphinxcontrib-googleanalytics = "^0.1"
"sphinxcontrib.gist" = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
